--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "clsx": "^2.1.0",
     "lucide-react": "^0.321.0",
     "mongodb": "^6.3.0",
+    "mongoose": "^8.2.3",
     "next": "^14.1.0",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
